# SuperSearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  marketplace.yml  release.yml
crates/supersearch-runtime/: Cargo.toml
crates/supersearch-runtime/benches/: scheduler_bench.rs
crates/supersearch-runtime/src/: lib.rs  test_deno.rs
crates/supersearch-runtime/src/agent/: context.rs  controller.rs  executor.rs  mcp.rs  memory.rs  mod.rs  patterns.rs  planner.rs  task_graph.rs
crates/supersearch-runtime/src/capability/: gate.rs  mod.rs  namespace.rs  registry.rs  signature.rs  token.rs
crates/supersearch-runtime/src/extension/: discovery.rs  host.rs  manifest.rs  marketplace.rs  mod.rs  registry.rs  storage.rs  wasm.rs
crates/supersearch-runtime/src/extension/ipc/: envelope.rs  error.rs  mod.rs
crates/supersearch-runtime/src/extension/runtime/: allocator.rs  hmr.rs  isolate.rs  mod.rs  ops.rs
crates/supersearch-runtime/src/extension/scheduler/: mod.rs  queue.rs
crates/supersearch-runtime/src/journal/: entry.rs  mod.rs  reader.rs  replay.rs  writer.rs
crates/supersearch-runtime/src/kernel/: automation.rs  mod.rs  process.rs  runtime.rs
crates/supersearch-runtime/src/platform/: exec.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/supersearch-runtime/src/plugin/: host.rs  ipc.rs  manifest.rs  mod.rs  sandbox.rs
crates/supersearch-runtime/src/reactive/: graph.rs  mod.rs  node.rs  reconcile.rs  signal.rs
crates/supersearch-runtime/src/scheduler/: executor.rs  mod.rs  priority.rs  queue.rs  supervisor.rs  task.rs  yielding.rs
crates/supersearch-runtime/tests/: gate_b_single_extension_runtime.rs
docs/: README.md  architecture.md  extensions.md  security.md  usage.md
docs/architecture/: 000_PRINCIPLES.md  001_PHASE_0_EXISTING_ARCHITECTURE.md  002_PHASE_1_INDUSTRY_RESEARCH.md  003_PHASE_2_GAP_ANALYSIS.md  004_PHASE_3_ADRS.md  005_PHASE_4_EXTENSION_RUNTIME.md  006_ADDENDUM_RENDERER_REFINEMENTS.md  006_PHASE_5_CUSTOM_REACT_RENDERER.md  007_PHASE_6_NATIVE_UI_SYSTEM.md  008_UI_COMPONENT_CONTRACT.md  009_PHASE_7_SDK.md  010_ADDENDUM_SDK_REFINEMENTS.md  011_PHASE_8_IPC_PROTOCOL.md  012_ADDENDUM_IPC_REFINEMENTS.md  013_PHASE_9_SECURITY.md  014_ADDENDUM_SECURITY_REFINEMENTS.md  015_PHASE_10_PERFORMANCE.md  016_ADDENDUM_PERFORMANCE_REFINEMENTS.md  017_PHASE_11_MARKETPLACE.md  018_ADDENDUM_MARKETPLACE_OPERATIONS.md  019_PHASE_12_DEVELOPER_EXPERIENCE.md  020_ADDENDUM_DX_REFINEMENTS.md  021_PHASE_13_AI_EXTENSIONS.md  022_ADDENDUM_AI_OPERATIONS.md  023_PHASE_14_TESTING.md  024_ADDENDUM_QA_OPERATIONS.md  025_PHASE_15_ROADMAP.md  026_BETA_READINESS_PLAN.md  027_POST_LAUNCH_ROADMAP.md  028_APPLICATION_INTEGRATION_PLAN.md  ENGINEERING_JOURNAL.md
examples/extensions/ddg/: manifest.toml  run.sh
examples/extensions/wasm-hello/: manifest.toml  plugin.wat
examples/hello-world/: manifest.json
examples/hello-world/src/: index.ts
react-command-palette/: App.tsx  CommandItem.tsx  CommandPalette.tsx  Demo.tsx  DetailPane.tsx  ExtensionManager.tsx  Hydrator.tsx  README.md  Settings.tsx  bridge.ts  categories.ts  index.html  index.ts  main.tsx  package-lock.json  package.json  settings-main.tsx  settings.html  styles.css  tailwind.config.js  theme.ts  tsconfig.json  types.ts  useGlobalHotkey.ts  variants.ts  vite.config.ts
react-command-palette/settings/: SettingsApp.tsx  ipc.ts  types.ts  ui.tsx
react-command-palette/settings/panes/: About.tsx  Appearance.tsx  Extensions.tsx  General.tsx
requirements/: linux.md  macos.md  windows.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: actions.rs  agent.rs  extensions.rs  journal.rs  mod.rs  search.rs  settings.rs  system_search.rs  telemetry.rs  updater.rs  window.rs
src-tauri/tests/: ipc.rs
ui/: index.html
ui/scripts/: agent.js  app.js  bridge.js  extensions.js  keyboard.js  preview.js  search.js  settings.js
ui/styles/: animations.css  main.css
