[package]
name = "supersearch-runtime"
version = "0.1.0"
edition = "2021"
description = "AI-Native Productivity Operating Layer — Unified Runtime Kernel"
license = "Proprietary"

[dependencies]
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["time"] }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
parking_lot = "0.12"
capnp = "0.20"
capnp-futures = "0.20"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pin-project-lite = "0.2"
slab = "0.4"
# Event Journal — memory-mapped append-only log
memmap2 = "0.9"
crc32fast = "1.4"
# Capability system — cryptographic tokens
blake3 = "1.5"
# Reactive graph — topological sort and petgraph
petgraph = "0.6"
# Plugin runtime — WASM sandbox
wasmtime = "25.0"
# Serialization for journal entries
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
# Extension manifests (TOML) and script result parsing (JSON)
toml = "0.8"
serde_json = "1.0"
# Deterministic time for replay
quanta = "0.12"
# Lock-free concurrent data structures
dashmap = "6.1"
# Secure random kernel key for capability tokens
getrandom = "0.2"
deno_core = "0.409.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
url = "2.5.8"
anyhow = "1.0.104"
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
bitflags = { version = "2.13.1", features = ["serde"] }
serde_repr = "0.1.21"
deno_error = "=0.7.1"
tokio-stream = "0.1.19"
ed25519-dalek = "3.0.0"
tokio-tungstenite = "0.30.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.13"
rand = "0.10.2"

[[bench]]
name = "scheduler_bench"
harness = false
